[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://BallSpawn.gd" type="Script" id=2]
[ext_resource path="res://Pong.gd" type="Script" id=3]
[ext_resource path="res://Entities/PlayerPaddle.gd" type="Script" id=4]
[ext_resource path="res://Entities/CPUPaddle.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.5, 300.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 641.5, 79.5 )

[node name="GameRoot" type="Node2D"]
script = ExtResource( 3 )
score_thresh = 5

[node name="PlayerPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 22, 300 )
rotation = 1.5708
script = ExtResource( 4 )

[node name="CPUPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 1002, 300 )
rotation = -1.5708
script = ExtResource( 5 )
ball_spawn_path = NodePath("../BallSpawn")

[node name="PlayerGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGoal"]
position = Vector2( -64.5, 300.5 )
shape = SubResource( 1 )

[node name="CPUGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPUGoal"]
position = Vector2( 1089, 301 )
shape = SubResource( 1 )

[node name="VerticalBounds" type="StaticBody2D" parent="."]

[node name="TopBound" type="CollisionShape2D" parent="VerticalBounds"]
position = Vector2( 512.5, -79.5 )
shape = SubResource( 2 )

[node name="BottomBound" type="CollisionShape2D" parent="VerticalBounds"]
position = Vector2( 512, 680 )
shape = SubResource( 2 )

[node name="SplashScreen" type="Control" parent="."]

[node name="StartButton" type="Button" parent="SplashScreen"]
margin_left = 441.0
margin_top = 535.0
margin_right = 594.0
margin_bottom = 577.251
text = "Go!"

[node name="PlayerWinLabel" type="Label" parent="SplashScreen"]
visible = false
margin_left = 476.0
margin_top = 293.0
margin_right = 554.0
margin_bottom = 311.0
text = "YOU WIN"

[node name="PlayerLoseLabel" type="Label" parent="SplashScreen"]
visible = false
margin_left = 471.0
margin_top = 291.0
margin_right = 566.0
margin_bottom = 309.0
text = "YOU LOSE"

[node name="GameGUI" type="Control" parent="."]

[node name="LeftScore" type="Label" parent="GameGUI"]
margin_left = 387.0
margin_top = 17.0
margin_right = 427.0
margin_bottom = 35.0
text = "0"

[node name="RightScore" type="Label" parent="GameGUI"]
margin_left = 598.0
margin_top = 17.0
margin_right = 638.0
margin_bottom = 35.0
text = "0"

[node name="BallSpawn" type="Node2D" parent="."]
position = Vector2( 512, 300 )
script = ExtResource( 2 )

[connection signal="game_reset" from="." to="PlayerPaddle" method="_on_GameRoot_game_reset"]
[connection signal="game_reset" from="." to="CPUPaddle" method="_on_GameRoot_game_reset"]
[connection signal="game_reset" from="." to="BallSpawn" method="_on_GameRoot_game_reset"]
[connection signal="game_started" from="." to="PlayerPaddle" method="_on_GameRoot_game_started"]
[connection signal="game_started" from="." to="CPUPaddle" method="_on_GameRoot_game_started"]
[connection signal="game_started" from="." to="BallSpawn" method="_on_GameRoot_game_started"]
[connection signal="round_reset" from="." to="BallSpawn" method="_on_GameRoot_round_reset"]
[connection signal="body_entered" from="PlayerGoal" to="." method="_on_PlayerGoal_body_entered"]
[connection signal="body_entered" from="CPUGoal" to="." method="_on_CPUGoal_body_entered"]
[connection signal="pressed" from="SplashScreen/StartButton" to="." method="_start_game"]
